--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/home/mp/workspace/ExternalLibraries/jsoup-1.11.2.jar" sourcepath="/home/mp/workspace/ExternalLibraries/jsoup-1.11.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/mp/workspace/ExternalLibraries/jsoup-1.11.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
